# faer-wasm

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  STATUS.md
bench/: Cargo.toml  blas-ab.mjs  ceilings.mjs  evd-tune.mjs  gemm-tune-ab.mjs  l1-roofline.mjs  pyodide-vs-faer.mjs  svd-roofline.mjs  tune.mjs
blas/: Cargo.toml  README.md
blas/bench/: README.md  l1-roofline.mjs  l2-roofline.mjs  l3-roofline.mjs
blas/bench/src/: lib.rs
blas/src/: README.md  kernels.rs  lanes.rs  lib.rs
blas/src/L1/: README.md  mod.rs
blas/src/L2/: chemv.rs  mod.rs  zhemv.rs
blas/src/L3/: cgemm.rs  dgemm.rs  mod.rs  sgemm.rs  zgemm.rs
blas/src/level1/: asum.rs  axpy.rs  copy.rs  dot.rs  iamax.rs  mod.rs  nrm2.rs  rot.rs  rotg.rs  scal.rs  swap.rs
blas/src/level2/: gemv.rs  ger.rs  mod.rs  symv.rs  syr.rs  syr2.rs  trmv.rs  trsv.rs
blas/src/level3/: gemm.rs  mod.rs  symm.rs  syr2k.rs  syrk.rs  trmm.rs  trsm.rs
blas/tests/: README.md  level1.rs  level3.rs
blas/tests/L1/: common.rs  main.rs
blas/tests/L2/: common.rs  ctrmv.rs  main.rs  ztrmv.rs
blas/tests/L3/: cgemm.rs  common.rs  dgemm.rs  main.rs  sgemm.rs  zgemm.rs
docs/: benchmarks-2026-07.md  benchmarks-vs-pyodide-2026-07.md  blas-ab-2026-07.md  blas-layer-plan-2026-07.md  engineer-handoff-2026-07.md  research-eig-wasm-2026-07.md  research-schur-wasm-2026-07.md  research-svd-wasm-2026-07.md  wasm.md
kernels/: Cargo.toml
patches/: UPSTREAM-BASE.txt
schur/: Cargo.toml
smoke-test/: Cargo.toml  check.mjs  determinism.mjs  size-budgets.json
upstream/: 0002-add-wasm32-CI-job-with-a-node-smoke-test.patch  (+2 more)
(+24 files in other folders)
