[package]
name = "faer-wasm-blas"
version = "0.1.0"
edition = "2021"
publish = false

# The project's own BLAS layer (the first-built finished product of the
# 2026-07-18 direction reset): SIMD streaming loops, one file per
# function, organized by BLAS level. The plan table and implementation
# taxonomy live in README.md in this folder; evidence per row in
# ../docs/blas-ab-2026-07.md. The LAPACK-layer kernels re-route onto
# this crate as it fills in.

[dependencies]
# no_std sqrt (f64::sqrt is std-only); correctly-rounded IEEE, so
# bit-identical across targets. Same choice as ../kernels.
libm = { version = "0.2", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
